--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,18 @@
 .blank {
   color: rgb(21, 0, 255);
 }
+
+
+
+#customFooter {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border-top: 2px solid black;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5%;
+}
