--- a/src/App.css
+++ b/src/App.css
@@ -49,9 +49,15 @@
   text-align: center;
   align-items: center;
   border-top: 2px solid black;
-  position: fixed;
-  left: 0;
-  bottom: 0;
+
+ 
   width: 100%;
-  height: 5%;
+  position: relative;
+  bottom: 0;
+
+}
+
+
+body {
+  min-height: 100vh;
 }
