--- a/src/App.css
+++ b/src/App.css
@@ -44,20 +44,21 @@
 
 
 #customFooter {
-  display: flex;
-  justify-content: center;
+
   text-align: center;
-  align-items: center;
+
   border-top: 2px solid black;
 
  
   width: 100%;
-  position: relative;
+  position: absolute;
   bottom: 0;
+  height: 2px;
   
 }
 
 
 body {
   min-height: 100vh;
+  position: relative;
 }
